[rendering] Added some crude cache functionality (doing without would need unnecessary workarounds). Extended JavaDoc, converted to english. (Experimental:) Moved draw primitive functions into new class Tile.